jcio/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jcio-frontend
spec:
  selector:
    matchLabels:
      app: jcio-frontend
  replicas: 2
  template:
    spec:
      containers:
      - name: jcio-frontend
        image: jamesclonk/jcio-frontend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviedb-frontend
spec:
  selector:
    matchLabels:
      app: moviedb-frontend
  replicas: 1
  template:
    spec:
      containers:
      - name: moviedb-frontend
        image: jamesclonk/moviedb-frontend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviedb-backend
spec:
  selector:
    matchLabels:
      app: moviedb-backend
  replicas: 1
  template:
    spec:
      containers:
      - name: moviedb-backend
        image: jamesclonk/moviedb-backend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
