jcio/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jcio-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "5"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ${KUBE_DOMAIN}
    - www.${KUBE_DOMAIN}
    secretName: jcio-tls
  rules:
  - host: ${KUBE_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: jcio-frontend
          servicePort: 3000
  - host: www.${KUBE_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: jcio-frontend
          servicePort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: moviedb
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "5"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - moviedb.${KUBE_DOMAIN}
    - moviedb-frontend.${KUBE_DOMAIN}
    - moviedb-backend.${KUBE_DOMAIN}
    secretName: moviedb-tls
  rules:
  - host: moviedb.${KUBE_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: moviedb-frontend
          servicePort: 3007
  - host: moviedb-frontend.${KUBE_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: moviedb-frontend
          servicePort: 3007
  - host: moviedb-backend.${KUBE_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: moviedb-backend
          servicePort: 4007
